--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,5 +8,6 @@ environment:
   GOPATH: C:\GOPATH
 build_script:
 - cmd: go get -v -d -t github.com/pygz/subprocess/...
+- cmd: go get -u -v github.com/chrissimpkins/climock/...
 test_script:
 - cmd: go test -v ./...
